# tinkoff_trading_bot

./: Cargo.toml  README.md  build.rs
src/: bot.rs  main.rs  strategies.rs  tcs.rs  tg.rs
src/strategies/: scalp.rs
