[package]
name = "tinkoff_trading_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tonic = {version = "0.8.2", features = ["tls", "tls-roots", "gzip"] }
prost = "0.11.5"
prost-types = "0.11.5"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
futures = "0.3.25"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde_json = "1.0.91"
serde = "1.0.152"
chrono = "0.4.23"
chrono-tz = "0.8.1"


[build-dependencies]
tonic-build = "0.8.4"
